Lower Resolution Fix
Fixed the body section not aligned properly in lower resolutions due to some changes made to the CSS before.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 /*
  Customizations Below to override the defaults.
 */
-section { width: 90%; padding: 30px 30px 50px 30px; margin: 20px 0; margin-top: 190px; margin-right: 20px; margin-left: 20px; position: relative; background: #000000; border-radius: 3px; border: 1px solid #888888; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4); }
+section { background: #000000; border: 1px solid #888888; padding: 10px 10px 10px 10px;}
 
 h1, h2, h3, h4, h5, h6 { color: #ffffff; margin: 0 0 10px; }
 
